[package]
name = "dospawn"
description = "Spawn batch jobs onto DigitalOcean Droplets"
version = "0.1.0"
authors = ["Adam Reichold <adam.reichold@ufz.de>"]
license = "Apache-2.0/MIT"
repository = "https://git.ufz.de/reichold/dospawn"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
